.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

3.3.2 - Unreleased
------------------

- Fix linkintegrity-related issue regarding missing undo log entries after
  removing content via the "delete" action.
  This fixes http://dev.plone.org/plone/ticket/7784
  [witsch]

- Show template id or view name in <body class="template-..">. There was 
  template id only before.
  http://dev.plone.org/plone/ticket/9111
  [naro]

- Check AddPortalContent permission before calling invokeFactory from
  FactoryTool.
  http://dev.plone.org/plone/ticket/8748
  [naro]

- Added helper methods to the i18nl10n method, to change the default date and
  time formats used by zope.i18n.locales. This makes it easier to use a 24
  hour clock in the date/time widgets for English speakers.
  [hannosch]

- Removed msgids in portlets.xml. There is no support for
  msgids in the import of portlets.xml implementation.
  This allow to extract translatable strings with i18ndude.
  This closes http://dev.plone.org/plone/ticket/9631
  [vincentfretin]

- Fixed some duplicated msgids with different defaults.
  There is no new strings to translate.
  See http://dev.plone.org/plone/ticket/9633
  [vincentfretin]

- Make the external_editor link on OS X use the .zem extension.
  Fixes http://dev.plone.org/plone/ticket/7291
  [optilude]

- Minor or trivial changes and fixes to many templates for obtain
  code that is also XHTML Strict
  See http://dev.plone.org/plone/ticket/4379
  [keul]
  
- Fixed *folder_constraintypes_form.cpt* template; was XHTML invalid when
  showing portal type with whitespaces (like "News Item")
  [keul]

- Fixed handling of URL fragment identifiers in form-tabbing. This closes
  http://dev.plone.org/plone/ticket/9500
  [mj]


3.3.1 - September 9, 2009
-------------------------

- Defined the portal_url variable to